[tool.poetry]
name = "ape-recursion-error"
version = "0.1.0"
description = ""
authors = ["nazariyv <hi@naz.ooo>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
eth-ape = "0.6.19"
pytest = "^7.4.0"
ape-foundry = {git = "https://github.com/antazoey/ape-foundry.git", rev = "0b05dbe5a40f69c123a4ccf40009bd5162ed9744"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
